log

Thu 14 Mar 2024 08:51:09 PM UTC: 
 exercises.c | 48 +++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 43 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:3: error: ‘valorMasGrande’ undeclared (first use in this function)
   13 |   valorMasGrande = 0;
      |   ^~~~~~~~~~~~~~
exercises.c:13:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:34: error: expected statement before ‘)’ token
   66 |   for (int i = 0; i < size1; i++))
      |                                  ^
exercises.c:68:18: error: ‘i’ undeclared (first use in this function)
   68 |     nuevoArreglo[i] = arr1[i];
      |                  ^
exercises.c:74:23: error: ‘size_1’ undeclared (first use in this function); did you mean ‘size1’?
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                       ^~~~~~
      |                       size1
exercises.c:74:32: error: ‘size_2’ undeclared (first use in this function); did you mean ‘size2’?
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                                ^~~~~~
      |                                size2
exercises.c:74:53: error: passing argument 4 of ‘qsort’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                                                     ^~~~~~~~
      |                                                     |
      |                                                     size_t (*)(const void *, const void *) {aka long unsigned int (*)(const void *, const void *)}
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:839:34: note: expected ‘__compar_fn_t’ {aka ‘int (*)(const void *, const void *)’} but argument is of type ‘size_t (*)(const void *, const void *)’ {aka ‘long unsigned int (*)(const void *, const void *)’}
  839 |                    __compar_fn_t __compar) __nonnull ((1, 4));
      |                    ~~~~~~~~~~~~~~^~~~~~~~
In file included from test.c:1:
exercises.c:75:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |   return nuevoArreglo;
      |          ^~~~~~~~~~~~
exercises.c:63:6: note: declared here
   63 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,int result[]) {
      |      ^~~~~~~~~~~~~~~~~
exercises.c: In function ‘findMax’:
exercises.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
exercises.c: In function ‘comparar’:
exercises.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e0c905c
Thu 14 Mar 2024 08:52:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:3: error: ‘valorMasGrande’ undeclared (first use in this function)
   13 |   valorMasGrande = 0;
      |   ^~~~~~~~~~~~~~
exercises.c:13:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:34: error: expected statement before ‘)’ token
   66 |   for (int i = 0; i < size1; i++))
      |                                  ^
exercises.c:68:18: error: ‘i’ undeclared (first use in this function)
   68 |     nuevoArreglo[i] = arr1[i];
      |                  ^
exercises.c:74:23: error: ‘size_1’ undeclared (first use in this function); did you mean ‘size1’?
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                       ^~~~~~
      |                       size1
exercises.c:74:32: error: ‘size_2’ undeclared (first use in this function); did you mean ‘size2’?
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                                ^~~~~~
      |                                size2
exercises.c:74:53: error: passing argument 4 of ‘qsort’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   74 |   qsort (nuevoArreglo,size_1 + size_2, sizeof(int), comparar);
      |                                                     ^~~~~~~~
      |                                                     |
      |                                                     size_t (*)(const void *, const void *) {aka long unsigned int (*)(const void *, const void *)}
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:839:34: note: expected ‘__compar_fn_t’ {aka ‘int (*)(const void *, const void *)’} but argument is of type ‘size_t (*)(const void *, const void *)’ {aka ‘long unsigned int (*)(const void *, const void *)’}
  839 |                    __compar_fn_t __compar) __nonnull ((1, 4));
      |                    ~~~~~~~~~~~~~~^~~~~~~~
In file included from test.c:1:
exercises.c:75:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |   return nuevoArreglo;
      |          ^~~~~~~~~~~~
exercises.c:63:6: note: declared here
   63 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,int result[]) {
      |      ^~~~~~~~~~~~~~~~~
exercises.c: In function ‘findMax’:
exercises.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
exercises.c: In function ‘comparar’:
exercises.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed4c625
